--- a/termini.html
+++ b/termini.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="theme-color" content="#970a2c">
    <meta name="description" content="Termini e condizioni per donazioni di libri ad Ostia.">
 
    <title>Termini donazione</title>
@@ -157,7 +157,7 @@
 
       .content-wrapper {
 
-    margin-top: 10px !important;
+    margin-top: 60px !important;
     padding: 0 1rem !important;
     position: relative !important;     
     max-width: 900px;
