--- a/termini.html
+++ b/termini.html
@@ -914,7 +914,7 @@ a:hover {
                 <ul>
                     <li>Libri in cattivo stato, sottolineati o danneggiati</li>
                     <li>Opere già presenti nel Sistema "Biblioteche di Roma"</li>
-                    <li>Materiale obsoleto, superato nei contenuti o, specie per la narrativa, non rispondente alle aspettative attuali dell'utenza.</li>
+                    <li>Materiale obsoleto, superato nei contenuti o, specie per la narrativa, non rispondente alle esigenze e alle aspettative attuali dell'utenza.</li>
                     <li>Enciclopedie e opere giuridiche non aggiornate</li>
                     <li>Dizionari con più di quattro anni</li>
                     <li>Testi propagandistici o dottrinali</li>
