--- a/termini.html
+++ b/termini.html
@@ -914,7 +914,7 @@ a:hover {
                 <ul>
                     <li>Libri in cattivo stato, sottolineati o danneggiati</li>
                     <li>Opere già presenti nel Sistema "Biblioteche di Roma"</li>
-                    <li>Materiale obsoleto o superato nei contenuti</li>
+                    <li>Materiale obsoleto, superato nei contenuti o, specie per la narrativa, non rispondente alle aspettative e alle esigenze attuali dell'utenza</li>
                     <li>Enciclopedie e opere giuridiche non aggiornate</li>
                     <li>Dizionari con più di quattro anni</li>
                     <li>Testi propagandistici o dottrinali</li>
@@ -968,8 +968,8 @@ a:hover {
 
                 <h2>Ulteriori Informazioni</h2>
                 <p>
-                    Sezione Adulti: <a href="mailto:l.daniello@bibliotechediroma.it">l.daniello@bibliotechediroma.it</a><br>
-                    Sezione Ragazzi: <a href="mailto:f.ferri@bibliotechediroma.it">f.ferri@bibliotechediroma.it</a>
+                    Settore Adulti: <a href="mailto:l.daniello@bibliotechediroma.it">l.daniello@bibliotechediroma.it</a><br>
+                    Settore Ragazzi: <a href="mailto:f.ferri@bibliotechediroma.it">f.ferri@bibliotechediroma.it</a>
                 </p>
 
 
