--- a/termini.html
+++ b/termini.html
@@ -905,29 +905,30 @@ a:hover {
                     L'acquisizione della donazione è subordinata ai seguenti criteri:
                 </p>
                 <ul>
-                    <li>Gestione coerente e omogenea delle collezioni</li>
-                    <li>Sostenibilità del trattamento catalografico</li>
-                    <li>Disponibilità effettiva di spazio</li>
+                    <li>Gestione coerente e omogenea delle collezioni.</li>
+                    <li>Sostenibilità del trattamento catalografico.</li>
+                    <li>Disponibilità effettiva di spazio.</li>
                 </ul>
                 
                 <h2>Materiale Non Accettato</h2>
                 <ul>
-                    <li>Libri in cattivo stato, sottolineati o danneggiati</li>
-                    <li>Opere già presenti nel Sistema "Biblioteche di Roma"</li>
-                    <li>Materiale obsoleto, superato nei contenuti o, specie per la narrativa, non rispondente alle aspettative e alle esigenze attuali dell'utenza</li>
-                    <li>Enciclopedie e opere giuridiche non aggiornate</li>
-                    <li>Dizionari con più di quattro anni</li>
-                    <li>Testi propagandistici o dottrinali</li>
-                    <li>Libri scolastici</li>
-                    <li>Riviste e periodici</li>
-                    <li>Guide turistiche datate</li>
-                    <li>Saggi in lingua originale</li>
-                    <li>Documenti autoprodotti</li>
-                    <li>Manuali di informatica non recenti</li>
-                    <li>Supporti multimediali obsoleti</li>
-                    <li>Fumetti da edicola</li>
-                    <li>Collane economiche da edicola</li>
-                    <li>Tesi di laurea</li>
+                    <li>Libri in cattivo stato, sottolineati o danneggiati.</li>
+                    <li>Opere già presenti nel Sistema "Biblioteche di Roma".</li>
+                    <li>Materiale obsoleto, superato nei contenuti.</li>
+                    <li>Narrativa non più rispondente alle aspettative e agli interessi attuali dell'utenza.</li>
+                    <li>Enciclopedie e opere giuridiche non aggiornate.</li>
+                    <li>Dizionari con più di quattro anni.</li>
+                    <li>Testi propagandistici o dottrinali.</li>
+                    <li>Libri scolastici.</li>
+                    <li>Riviste e periodici.</li>
+                    <li>Guide turistiche datate.</li>
+                    <li>Saggi in lingua originale.</li>
+                    <li>Documenti autoprodotti.</li>
+                    <li>Manuali di informatica non recenti.</li>
+                    <li>Supporti multimediali obsoleti.</li>
+                    <li>Fumetti da edicola.</li>
+                    <li>Collane economiche da edicola.</li>
+                    <li>Tesi di laurea.</li>
                 </ul>
 
                 <h2>Procedura di Donazione</h2>
