--- a/termini.html
+++ b/termini.html
@@ -914,7 +914,7 @@ a:hover {
                 <ul>
                     <li>Libri in cattivo stato, sottolineati o danneggiati.</li>
                     <li>Opere già presenti nel Sistema "Biblioteche di Roma".</li>
-                    <li>Materiale obsoleto, superato nei contenuti.</li>
+                    <li>Materiale obsoleto e superato nei contenuti.</li>
                     <li>Narrativa non più rispondente alle aspettative e agli interessi attuali dell'utenza.</li>
                     <li>Enciclopedie e opere giuridiche non aggiornate.</li>
                     <li>Dizionari con più di quattro anni.</li>
