--- a/termini.html
+++ b/termini.html
@@ -937,16 +937,19 @@ a:hover {
                 </p>
                 <ol>
                     <li>
-                        Compila l'apposito 
-                        <a href="https://bibliotecamorante.github.io/donazione/" 
-                           target="_blank"
-                           style="color: var(--primary); font-weight: bold;">modulo</a>.
-                    </li>
-                    <li>
-                        Clicca sul pulsante 
-                        <em>Invia Donazione</em> 
-                        per trasmettere la tua richiesta alla biblioteca.
-                    </li>
+    Compila il 
+    <a href="https://bibliotecamorante.github.io/donazione/" 
+       target="_blank" 
+       style="color: var(--primary); font-weight: bold; text-decoration: none;">
+       modulo dedicato
+    </a>, accettando le condizioni relative alla donazione.
+</li>
+<li>
+    Clicca sul pulsante 
+    <span style="font-weight: bold; color: var(--primary);">"Invia Donazione"</span> 
+    per trasmettere la tua richiesta alla biblioteca.
+</li>
+
                 </ol>
                
                <h2>Consegna del materiale</h2>
