--- a/termini.html
+++ b/termini.html
@@ -946,7 +946,7 @@ a:hover {
 </li>
 <li>
     Clicca sul pulsante 
-    <span style="font-weight: bold; color: var(--primary);">"Invia Donazione"</span> 
+    <span style="font-weight: bold; color: var(--primary);">Invia Donazione</span> 
     per trasmettere la tua richiesta alla biblioteca.
 </li>
 
