--- a/termini.html
+++ b/termini.html
@@ -941,8 +941,7 @@ a:hover {
     <a href="https://bibliotecamorante.github.io/donazione/" 
        target="_blank" 
        style="color: var(--primary); font-weight: bold; text-decoration: none;">
-       modulo dedicato
-    </a>, accettando le condizioni relative alla donazione.
+       modulo dedicato</a>, accettando le condizioni relative alla donazione.
 </li>
 <li>
     Clicca sul pulsante 
