--- a/termini.html
+++ b/termini.html
@@ -892,6 +892,84 @@ a:hover {
 }
 
       
+/* Tablet optimization (768px - 1024px) */
+@media (min-width: 768px) and (max-width: 1024px) {
+  /* Navigation icons adjustments */
+  .nav-icons {
+    gap: 2rem;
+    padding-top: 15px;
+    justify-content: flex-start;
+  }
+
+  .nav-icons a:first-child::after {
+    left: calc(100% + 1rem);
+    height: 16px;
+  }
+
+  .nav-icons img {
+    height: 20px;
+    width: 20px;
+  }
+
+  /* Audio controls adjustments */
+  .audio-control-container {
+    gap: 8px;
+    right: 1rem;
+  }
+
+  .audio-control {
+    width: 34px;
+    height: 34px;
+    font-size: 18px;
+  }
+
+  .audio-label {
+    font-size: 0.9rem;
+  }
+
+  /* Adjust spacing for better layout */
+  .library-name {
+    margin-bottom: 1.5rem;
+    padding-right: 1rem;
+  }
+
+  .library-info {
+    gap: 0.4rem;
+  }
+}
+
+/* Small tablet optimization (600px - 767px) */
+@media (min-width: 600px) and (max-width: 767px) {
+  .nav-icons {
+    gap: 1.5rem;
+    padding-top: 12px;
+  }
+
+  .nav-icons a:first-child::after {
+    left: calc(100% + 0.75rem);
+    height: 14px;
+  }
+
+  .nav-icons img {
+    height: 18px;
+    width: 18px;
+  }
+
+  .audio-control-container {
+    gap: 6px;
+    right: 0.75rem;
+  }
+
+  .audio-control {
+    width: 32px;
+    height: 32px;
+    font-size: 16px;
+  }
+
+  .audio-label {
+    font-size: 0.85rem;
+  }
+} 
    </style>
 </head>
 <body>
