--- a/termini.html
+++ b/termini.html
@@ -894,22 +894,37 @@ a:hover {
       
 /* Tablet optimization (768px - 1024px) */
 @media (min-width: 768px) and (max-width: 1024px) {
-  /* Navigation icons adjustments */
+  .content-wrapper {
+    position: relative;
+    padding-top: 2rem;
+  }
+  
   .nav-icons {
+    position: absolute;
+    top: 0;
+    left: 1rem;
     gap: 2rem;
-    padding-top: 15px;
-    justify-content: flex-start;
+    display: flex !important;
+    visibility: visible !important;
+    opacity: 1 !important;
+    z-index: 10;
   }
 
-  .nav-icons a:first-child::after {
-    left: calc(100% + 1rem);
+.nav-icons a:first-child::after {
+    right: -1rem;
     height: 16px;
   }
 
   .nav-icons img {
     height: 20px;
     width: 20px;
+    display: block !important;
   }
+
+
+
+
+   
 
   /* Audio controls adjustments */
   .audio-control-container {
@@ -939,20 +954,33 @@ a:hover {
 }
 
 /* Small tablet optimization (600px - 767px) */
+/* Small tablet optimization (600px - 767px) */
 @media (min-width: 600px) and (max-width: 767px) {
-  .nav-icons {
-    gap: 1.5rem;
-    padding-top: 12px;
+  .content-wrapper {
+    position: relative;
+    padding-top: 2rem;
   }
 
-  .nav-icons a:first-child::after {
-    left: calc(100% + 0.75rem);
-    height: 14px;
+  .nav-icons {
+    position: absolute;
+    top: 0;
+    left: 1rem;
+    gap: 1.5rem;
+    display: flex !important;
+    visibility: visible !important;
+    opacity: 1 !important;
+    z-index: 10;
   }
 
   .nav-icons img {
     height: 18px;
     width: 18px;
+    display: block !important;
+  }
+
+  .nav-icons a:first-child::after {
+    right: -0.75rem;
+    height: 14px;
   }
 
   .audio-control-container {
