--- a/termini.html
+++ b/termini.html
@@ -125,6 +125,16 @@
   gap: 0.5rem;
 }
 
+.library-info a.tooltip-library {
+    font-weight: 400;
+    font-size: 16px;
+    color: #FF4347;
+}
+.library-info img {
+    height: 16px; /* Adjusted to match the new font size */
+    width: 16px;
+}
+      
 /* Audio control styles updated for right alignment */
 .text-controls {
   position: relative;
