--- a/termini.html
+++ b/termini.html
@@ -128,11 +128,15 @@
 .library-info a.tooltip-library {
     font-weight: 400;
     font-size: 16px;
-    color: #FF4347;
+    color: #E63E42;  /* Slightly darker red */
+    display: flex;
+    align-items: center;
 }
+
 .library-info img {
-    height: 16px; /* Adjusted to match the new font size */
+    height: 16px;
     width: 16px;
+    opacity: 0.9;  /* Slightly dim the icon to match the darker text */
 }
       
 /* Audio control styles updated for right alignment */
