--- a/termini.html
+++ b/termini.html
@@ -1023,6 +1023,17 @@ a:hover {
     font-size: 0.85rem;
   }
 } 
+
+
+@media (max-width: 768px) {
+  footer .container {
+    width: 95%;
+    align-items: center;
+    justify-content: center; /* Mantiene il logo e le info centrati */
+    gap: 2rem; /* Aumenta lo spazio tra logo e info per bilanciare */
+  }
+}
+      
    </style>
 </head>
 <body>
