--- a/termini.html
+++ b/termini.html
@@ -1025,7 +1025,18 @@ a:hover {
   }
 } 
 
-
+/* Tablet (768px - 1024px) */
+@media (min-width: 768px) and (max-width: 1024px) {
+  footer .container {
+    width: 95%;
+    justify-content: center;
+    gap: 3rem;
+  }
+  
+  footer .info {
+    justify-content: center;
+  }
+}
 
       
    </style>
