--- a/index.html
+++ b/index.html
@@ -640,7 +640,20 @@ document.head.appendChild(style);
         margin-top: 0.5rem; /* Ridotto da 2 (0.5rem) */
     }
 }
-	    
+
+
+/* Tablet (768px - 1024px) */
+@media (min-width: 768px) and (max-width: 1024px) {
+  footer .container {
+    width: 95%;
+    justify-content: center;
+   
+  }
+  
+  footer .info {
+    justify-content: center;
+  }
+}	
     </style>
 
 
