--- a/index.html
+++ b/index.html
@@ -696,6 +696,19 @@ document.addEventListener('DOMContentLoaded', () => {
         }
     });
 });
+
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  footer .container {
+    flex-direction: column;
+    text-align: center;
+  }
+  
+  footer .md\:flex-row {
+    justify-content: center;
+  }
+}
+	
 </script>
 	
 <body>
