--- a/index.html
+++ b/index.html
@@ -701,13 +701,20 @@ document.addEventListener('DOMContentLoaded', () => {
 @media (min-width: 768px) and (max-width: 1024px) {
   footer .container {
     flex-direction: column;
-    text-align: center;
+    align-items: center;
+    gap: 1.5rem;
   }
-  
+
   footer .md\:flex-row {
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
   }
-}
+
+  /* Rimuove margin bottom che interferisce con il nuovo layout */
+  footer .mb-4 {
+    margin-bottom: 0;
+  }
 	
 </script>
 	
