--- a/index.html
+++ b/index.html
@@ -1702,11 +1702,11 @@ if (response.ok) {
 
 
 <footer class="bg-[#970a2c] text-white mt-16 py-8">
-  <div class="container mx-auto px-4 md:px-6 flex flex-col items-center">
-    <div class="mb-6">
+  <div class="container mx-auto px-4 md:px-6 flex flex-col sm:flex-row md:flex-col lg:flex-row items-center justify-between">
+    <div class="mb-4 md:mb-6 lg:mb-0">
       <img src="footermorante.png" alt="Logo Biblioteca Morante" class="h-8 md:h-10" style="cursor: pointer;" onclick="window.open('https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2', '_blank');">
     </div>
-    <div class="flex flex-col space-y-4 text-center text-sm">
+    <div class="flex flex-col sm:flex-row md:flex-col lg:flex-row md:space-x-0 lg:space-x-8 space-y-2 sm:space-y-0 md:space-y-4 lg:space-y-0 text-center md:text-center lg:text-left text-sm">
       <div class="flex items-center justify-center space-x-2">
         <i class="fas fa-location-dot w-4"></i>
         <span class="flex flex-col">
@@ -1735,7 +1735,6 @@ if (response.ok) {
     </div>
   </div>
 </footer>
-
 
 
 
