--- a/termini.html
+++ b/termini.html
@@ -351,17 +351,20 @@
            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
        }
        
-       main h1 {
-           color: var(--primary);
-           font-size: 2rem; /* Ridotto da un valore precedente */
-          margin-top: 3rem;
-        margin-bottom: 1.5rem; /* Riduce la distanza sotto il titolo */
-    line-height: 1.2; /* Rende il titolo meno alto */
-       }
+      main h1 {
+  color: var(--primary); /* Mantieni il colore definito */
+  font-size: 32px; /* Modifica il font-size a 32px */
+  font-weight: 400; /* Imposta il font-weight a 400 */
+  margin-top: 3rem;
+  margin-bottom: 1.5rem; /* Mantieni la distanza sotto il titolo */
+  line-height: 1.2; /* Mantieni il line-height */
+}
+
        
        h2 {
            color: var(--primary);
-           font-size: 1.7rem; /* Ridotto da 1.8rem */
+           font-size: 26px;
+           font-weight: 400;
            margin-bottom: 2rem;
            padding-bottom: 0.5rem;
            border-bottom: 2px solid var(--primary);
