--- a/termini.html
+++ b/termini.html
@@ -36,7 +36,7 @@
            color: var(--text);
            font-family: 'Space Grotesk', sans-serif;
            font-size: 20px; /* Ridotto da 22px */
-           line-height: 30px; /* Ridotto da 34px */
+           line-height: 32px; /* Ridotto da 34px */
            letter-spacing: normal;
            word-spacing: 0px;
        }
@@ -351,20 +351,17 @@
            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
        }
        
-      main h1 {
-  color: var(--primary); /* Mantieni il colore definito */
-  font-size: 32px; /* Modifica il font-size a 32px */
-  font-weight: 400; /* Imposta il font-weight a 400 */
-  margin-top: 3rem;
-  margin-bottom: 1.5rem; /* Mantieni la distanza sotto il titolo */
-  line-height: 1.2; /* Mantieni il line-height */
-}
-
+       main h1 {
+           color: var(--primary);
+           font-size: 22px; /* Ridotto da un valore precedente */
+          margin-top: 3rem;
+        margin-bottom: 1.5rem; /* Riduce la distanza sotto il titolo */
+    line-height: 1.2; /* Rende il titolo meno alto */
+       }
        
        h2 {
            color: var(--primary);
-           font-size: 26px;
-           font-weight: 400;
+           font-size: 20px; /* Ridotto da 1.8rem */
            margin-bottom: 2rem;
            padding-bottom: 0.5rem;
            border-bottom: 2px solid var(--primary);
