--- a/termini.html
+++ b/termini.html
@@ -353,7 +353,8 @@
        
        main h1 {
            color: var(--primary);
-           font-size: 22px; /* Ridotto da un valore precedente */
+  font-size: 32px;
+  font-weight: 400;
           margin-top: 3rem;
         margin-bottom: 1.5rem; /* Riduce la distanza sotto il titolo */
     line-height: 1.2; /* Rende il titolo meno alto */
