--- a/termini.html
+++ b/termini.html
@@ -388,6 +388,8 @@
        }
        
        p {
+           margin-bottom: 1.2rem; /* Standardized spacing for all paragraphs */
+           line-height: 30px; /* Standardized line height */
            margin-bottom: 1.7rem; /* Ridotto da 1.8rem */
        }
        
