--- a/termini.html
+++ b/termini.html
@@ -389,7 +389,7 @@
        
        p {
            margin-bottom: 1.2rem; /* Standardized spacing for all paragraphs */
-           line-height: 30px; /* Standardized line height */
+           line-height: 1.6; /* Standardized line height */
            margin-bottom: 1.7rem; /* Ridotto da 1.8rem */
        }
        
