--- a/termini.html
+++ b/termini.html
@@ -371,12 +371,14 @@
        ul {
            list-style-type: none;
            padding-left: 0;
+           margin-bottom: 1.2rem; 
        }
        
        ul li {
-           padding: 0.7rem 0; /* Ridotto da 0.7rem */
+           padding: 0.4rem 0; /* Ridotto da 0.7rem */
            position: relative;
            padding-left: 1.5rem;
+           line-height: 1.6;
        }
        
        ul li::before {
