--- a/raccolta.html
+++ b/raccolta.html
@@ -56,7 +56,7 @@ footer, footer * {
 }
 
  p {
-        font-size: 22px; /* Impostato a 20px */
+        font-size: 20px; /* Impostato a 20px */
     }
         
 .top-banner {
@@ -298,12 +298,13 @@ footer a {
         margin-bottom: 0.3cm;
     }
     h1 {
-        font-size: 12pt;
+        font-size: 32px;
+        font-weight: 400;
         color: black !important;
         margin-bottom: 0.6cm;
     }
     h2 {
-        font-size: 10pt;
+        font-size: 22px;
         color: black !important;
         margin-bottom: 0.2cm;
     }
