--- a/raccolta.html
+++ b/raccolta.html
@@ -297,7 +297,7 @@ footer a {
         padding: 0.3cm 0;
         margin-bottom: 0.3cm;
     }
-    h1 {
+    h1.text-3xl {
         font-size: 32px;
         font-weight: 400;
         color: black !important;
