--- a/raccolta.html
+++ b/raccolta.html
@@ -298,8 +298,8 @@ footer a {
         margin-bottom: 0.3cm;
     }
     h1 {
-        font-size: 32px;
-        font-weight: 400;
+  font-size: 32px !important;
+  font-weight: 400 !important;
         color: black !important;
         margin-bottom: 0.6cm;
     }
