--- a/raccolta.html
+++ b/raccolta.html
@@ -325,6 +325,7 @@ footer a {
     }
     h2 {
         font-size: 22px;
+        font-weight: 500 !important;
         color: black !important;
         margin-bottom: 0.2cm;
     }
