--- a/raccolta.html
+++ b/raccolta.html
@@ -326,19 +326,18 @@ footer a {
     h2 {
         font-size: 20px;
 
-/* Target h2 with maximum specificity */
-body .content-wrapper .container-fluid .bg-white h2.text-2xl.font-semibold,
-.content-section h2,
-h2.text-2xl.font-semibold,
-.bg-white h2 {
-    font-size: 20px !important;
-    font-weight: 500 !important;
-}
-
-/* Remove Tailwind defaults */
-.text-2xl {
-    font-size: 20px !important;
-}
+h2.text-2xl {
+        font-size: 20px !important;
+    }
+    
+    .text-2xl {
+        font-size: 20px !important;
+    }
+    
+    /* Force override any other h2 styles */
+    .bg-white h2 {
+        font-size: 20px !important;
+    }
 
 /* Remove Tailwind's font-semibold effect */
 .text-2xl.font-semibold {
