--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     --accent: #700f0a;     /* Darker bordeaux */
 }
 
-	    
+
 
 /* Stile base per tutti gli input */
 input[type="text"],
@@ -642,22 +642,6 @@ document.head.appendChild(style);
 }
 
 
-a[href*="openstreetmap"] {
-    display: inline-block;
-}
-
-a[href*="openstreetmap"]:hover img {
-    opacity: 0.7;
-}
-
-/* Stile dedicato per l'icona location */
-.flex.gap-2.items-center.mb-2 a[href*="openstreetmap"] img {
-    transition: all 0.3s ease;
-}
-
-.flex.gap-2.items-center.mb-2 a[href*="openstreetmap"]:hover img {
-    filter: opacity(.5) drop-shadow(0 0 0 #e06b8e);
-}	
 	
     </style>
 
@@ -772,7 +756,10 @@ document.addEventListener('DOMContentLoaded', () => {
        <div class="max-w-4xl mx-auto bg-white p-8 rounded-lg mt-2"> <!-- Removed shadow-md class -->
             <div class="flex flex-col mb-10 text-left space-y-4 px-4">
                 <div class="flex items-center gap-2 mb-2">
-<a href="https://www.openstreetmap.org/?mlat=41.7325117&mlon=12.2718834&zoom=18"target=_blank title="Visualizza la posizione sulla mappa"><img alt=Posizione src=location.svg class="h-5 text-gray-600 w-5 location-icon">
+                    <a href="https://www.openstreetmap.org/?mlat=41.7325117&mlon=12.2718834&zoom=18" 
+                       target="_blank" 
+                       title="Visualizza la posizione sulla mappa">
+                        <img src="location.svg" alt="Posizione" class="h-5 w-5 text-gray-600">
                     </a>
                    <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
    target="_blank"
