--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
     --accent: #700f0a;     /* Darker bordeaux */
 }
 
+/* Aggiungo il nuovo stile per l'icona location */
+.location-icon {
+    transition: filter 0.3s ease;
+}
 
+.location-icon:hover {
+    filter: invert(15%) sepia(95%) saturate(2713%) hue-rotate(337deg) brightness(84%) contrast(98%);
+}
 
 /* Stile base per tutti gli input */
 input[type="text"],
