--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
 /* Aggiungo il nuovo stile per l'icona location */
 .location-icon {
-    transition: filter 0.3s ease;
+    transition: all 0.3s ease;
+    filter: invert(39%) sepia(0%) saturate(0%) hue-rotate(147deg) brightness(97%) contrast(92%);
 }
 
 .location-icon:hover {
@@ -764,10 +765,12 @@ document.addEventListener('DOMContentLoaded', () => {
             <div class="flex flex-col mb-10 text-left space-y-4 px-4">
                 <div class="flex items-center gap-2 mb-2">
                     <a href="https://www.openstreetmap.org/?mlat=41.7325117&mlon=12.2718834&zoom=18" 
-                       target="_blank" 
-                       title="Visualizza la posizione sulla mappa">
-                        <img src="location.svg" alt="Posizione" class="h-5 w-5 text-gray-600">
-                    </a>
+   target="_blank" 
+   title="Visualizza la posizione sulla mappa">
+    <img alt="Posizione" 
+         src="location.svg" 
+         class="location-icon h-5 w-5 text-gray-600">
+</a>
                    <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
    target="_blank"
    class="biblioteca-link">
