--- a/index.html
+++ b/index.html
@@ -29,16 +29,15 @@
     --accent: #700f0a;     /* Darker bordeaux */
 }
 
-/* Aggiungo il nuovo stile per l'icona location */
 .location-icon {
     transition: all 0.3s ease;
-    /* Rosso scuro iniziale (#540f26) */
-    filter: invert(10%) sepia(29%) saturate(2467%) hue-rotate(317deg) brightness(92%) contrast(95%);
+    /* Rosso scuro (#700f0a) */
+    filter: invert(13%) sepia(83%) saturate(2611%) hue-rotate(350deg) brightness(91%) contrast(95%);
 }
 
 .location-icon:hover {
-    /* Rosso più chiaro al hover (#e06b8e) */
-    filter: invert(59%) sepia(15%) saturate(1622%) hue-rotate(308deg) brightness(92%) contrast(84%);
+    /* Rosso più chiaro (#970a2c) */
+    filter: invert(15%) sepia(95%) saturate(2713%) hue-rotate(337deg) brightness(84%) contrast(98%);
 }
 
 /* Stile base per tutti gli input */
