--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
 .location-icon {
     transition: all 0.3s ease;
-    /* Rosso scuro (#700f0a) */
-    filter: invert(13%) sepia(83%) saturate(2611%) hue-rotate(350deg) brightness(91%) contrast(95%);
+    /* Rosso scuro (#4a0404) */
+    filter: invert(10%) sepia(74%) saturate(3975%) hue-rotate(346deg) brightness(87%) contrast(104%);
 }
 
 .location-icon:hover {
-    /* Rosso più chiaro (#970a2c) */
-    filter: invert(15%) sepia(95%) saturate(2713%) hue-rotate(337deg) brightness(84%) contrast(98%);
+    /* Rosso acceso (#ff0000) */
+    filter: invert(12%) sepia(100%) saturate(6449%) hue-rotate(0deg) brightness(124%) contrast(115%);
 }
 
 /* Stile base per tutti gli input */
