--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
 
 .location-icon {
     transition: all 0.3s ease;
-    /* Rosso scuro (#4a0404) */
-    filter: invert(10%) sepia(74%) saturate(3975%) hue-rotate(346deg) brightness(87%) contrast(104%);
+    /* Rosso molto scuro, quasi bordeaux */
+    filter: invert(9%) sepia(38%) saturate(6611%) hue-rotate(345deg) brightness(63%) contrast(99%);
 }
 
 .location-icon:hover {
-    /* Rosso acceso (#ff0000) */
-    filter: invert(12%) sepia(100%) saturate(6449%) hue-rotate(0deg) brightness(124%) contrast(115%);
+    /* Rosso brillante e luminoso */
+    filter: invert(21%) sepia(99%) saturate(7402%) hue-rotate(356deg) brightness(141%) contrast(124%);
+    transform: scale(1.1);  /* Aggiunto un leggero effetto di ingrandimento */
 }
 
 /* Stile base per tutti gli input */
