--- a/index.html
+++ b/index.html
@@ -1074,6 +1074,7 @@ function handleISBNInput(input) {
     // Se sono stati inseriti caratteri non numerici o il campo è focalizzato
     if (prevValue !== input.value || input.matches(':focus')) {
         if (input.value.length > 0 || prevValue !== input.value) {
+            errorElement.textContent = 'Inserisci un numero di 10 o 13 cifre senza trattini';
             errorElement.classList.remove('hidden', 'text-red-500');
             errorElement.classList.add('text-gray-500');
         } else {
@@ -1091,7 +1092,6 @@ function handleISBNInput(input) {
         }
     }
 }
-
         
 
 // Aggiorna la funzione validateBookField
