--- a/index.html
+++ b/index.html
@@ -1289,10 +1289,10 @@ window.createBookEntry = function() {
 <div class="mb-5">
     <label class="search-click-label flex items-center gap-2 text-blue-600 font-medium cursor-pointer group relative">
         <i class="fas fa-book-open text-lg"></i>
-        <span class="transition-colors duration-150 active:text-blue-800">Search & click</span>
+        <span class="transition-colors duration-150 active:text-blue-800 group-hover:text-blue-700">Search & click</span>
         <span class="text-gray-500 text-sm font-normal">(opzionale)</span>
-        
-        <div class="invisible group-hover:visible absolute left-0 top-6 w-64 sm:w-72 p-3 bg-white border border-gray-200 rounded-lg shadow-lg z-10 text-sm text-gray-700">
+
+        <div class="invisible group-hover:visible absolute left-0 top-6 w-64 sm:w-72 p-3 bg-white border border-gray-200 rounded-lg shadow-lg z-10 text-sm text-gray-600">
             <div class="absolute -top-2 left-2 w-4 h-4 bg-white border-t border-l border-gray-200 transform rotate-45"></div>
             Cerca, seleziona e... boom! La scheda si completa al volo! Se preferisci, puoi inserire i dati manualmente. 
         </div>
