--- a/index.html
+++ b/index.html
@@ -1290,19 +1290,20 @@ window.createBookEntry = function() {
 <div class="mb-5">
   <div class="flex items-center gap-2 mb-2"> 
     <label class="group flex items-center gap-2 cursor-help">
-      <i class="fas fa-book-open text-lg text-blue-600 group-hover:text-blue-700 transition-colors"></i> 
-      <span class="text-blue-600 font-medium group-hover:text-blue-700 transition-colors relative">
+      <i class="fas fa-book-open text-lg text-blue-600 group-hover:text-blue-800 transition-all duration-200"></i> 
+      <span class="text-blue-600 font-medium group-hover:text-blue-800 transition-all duration-200 relative">
         Search & click 
         <span class="text-gray-500 text-sm font-normal">(opzionale)</span>
         
-        <!-- Tooltip spostato qui -->
-        <div class="invisible group-hover:visible absolute left-0 top-6 w-72 p-3 bg-white border border-gray-200 rounded-lg shadow-lg z-10 text-sm text-gray-700">
+        <!-- Tooltip con colore del testo corretto -->
+        <div class="invisible group-hover:visible absolute left-0 top-6 w-72 p-3 bg-white border border-gray-200 rounded-lg shadow-lg z-10 text-sm text-blue-400">
           <div class="absolute -top-2 left-2 w-4 h-4 bg-white border-t border-l border-gray-200 transform rotate-45"></div>
           Cerca, seleziona e... boom! La scheda si completa al volo! Se preferisci, puoi inserire i dati manualmente.
         </div>
       </span>
     </label>
   </div>
+
 
             <div class="flex gap-2">
                 <input type="text" 
