--- a/index.html
+++ b/index.html
@@ -1290,19 +1290,21 @@ window.createBookEntry = function() {
 <div class="mb-5">
   <div class="flex items-center gap-2 mb-2"> 
     <label class="group flex items-center gap-2 cursor-help">
-      <i class="fas fa-book-open text-lg text-blue-600 group-hover:text-blue-400 transition-all duration-200"></i> 
-      <span class="text-blue-600 font-medium group-hover:text-blue-400 transition-all duration-200 relative">
+      <i class="fas fa-book-open text-lg text-gray-700 group-hover:text-gray-500 transition-all duration-200"></i> 
+      <span class="text-gray-800 font-medium group-hover:text-gray-600 transition-all duration-200 relative">
         Search & click 
         <span class="text-gray-500 text-sm font-normal">(opzionale)</span>
         
-        <!-- Tooltip con testo grigio originale -->
-        <div class="invisible group-hover:visible absolute left-0 top-6 w-72 p-3 bg-white border border-gray-200 rounded-lg shadow-lg z-10 text-sm text-gray-700">
-          <div class="absolute -top-2 left-2 w-4 h-4 bg-white border-t border-l border-gray-200 transform rotate-45"></div>
+        <!-- Tooltip con testo grigio professionale -->
+        <div class="invisible group-hover:visible absolute left-0 top-6 w-72 p-3 bg-white border border-gray-300 rounded-lg shadow-md z-10 text-sm text-gray-800 font-sans">
+          <div class="absolute -top-2 left-2 w-4 h-4 bg-white border-t border-l border-gray-300 transform rotate-45"></div>
           Cerca, seleziona e... boom! La scheda si completa al volo! Se preferisci, puoi inserire i dati manualmente.
         </div>
       </span>
     </label>
   </div>
+</div>
+
 
 
             <div class="flex gap-2">
